--- a/templates/index.html
+++ b/templates/index.html
@@ -123,7 +123,7 @@
 								<li><a href="#"><i class="ion-eye"></i>138</a></li>
 							</ul>
 
-						</div><!-- single-post -->
+						</div><!-- single-post --><!-- single-post -->
 					</div><!-- card -->
 				</div><!-- col-lg-4 col-md-6 -->
 
