--- a/templates/index.html
+++ b/templates/index.html
@@ -161,7 +161,7 @@
 
 						</div><!-- single-post extra-blog -->
 
-					</div><!-- card -->
+					</div><!-- card --><!-- single-post extra-blog -->
 				</div><!-- col-lg-8 col-md-12 -->
 
 				<div class="col-lg-4 col-md-6">
