--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
 									<li><a href="#"><i class="ion-eye"></i>138</a></li>
 								</ul>
 
-							</div><!-- blog-right -->
+							</div><!-- blog-right --><!-- blog-right -->
 
 						</div><!-- single-post extra-blog -->
 
